addressed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,7 @@ p {
 a {
     font-family: 'Open Sans', sans-serif;
 }
+
+li {
+    font-family: 'Open Sans', sans-serif;
+}
